Fix mobile horizontal scroll issue by adding overflow-x hidden

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-base);
+  overflow-x: hidden;
 }
 
 body {
@@ -87,6 +88,7 @@ body {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 #grainient-container {
